# ragrig

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs  fix HTML parser performance nomic-embed never starts
.agents/skills/ragrig-architecture/: SKILL.md
examples/: minimal.rs
examples/dialog/: Cargo.toml
examples/dialog/src/: main.rs
examples/embedded_store/: Cargo.toml
examples/embedded_store/src/: main.rs
examples/embedded_togo/: Cargo.toml  build.rs
examples/embedded_togo/src/: main.rs
examples/pdf_bench/: Cargo.toml  system_prompt.md  vlm_prompt.md  vlm_prompt_1.md  vlm_prompt_2.md  vlm_prompt_deepseek_ocr.md  vlm_prompt_minicpm.md
examples/pdf_bench/src/: main.rs
examples/prompt_bench/: Cargo.toml  example_config.json
examples/prompt_bench/prompts/: concise.md  default.md  friendly.md  scholarly.md
examples/prompt_bench/src/: main.rs
examples/pseudonymizer/: Cargo.toml  pseudonymizer.md
examples/pseudonymizer/src/: main.rs
examples/rag_query/: Cargo.toml
examples/rag_query/src/: main.rs
examples/streaming_chat_egui/: Cargo.toml
examples/streaming_chat_egui/src/: main.rs
examples/streaming_chat_iced/: Cargo.toml
examples/streaming_chat_iced/src/: main.rs
examples/streaming_chat_ratatui/: Cargo.toml
examples/streaming_chat_ratatui/src/: main.rs
prompts/: poetic.txt
src/: agent.rs  agents.rs  documents.rs  embed.rs  error.rs  fixtures.rs  fs_session_store.rs  generate.rs  history.rs  history_persistence.rs  lib.rs  main.rs  memory.rs  parsers.rs  prompts.rs  store.rs  types.rs  vector.rs  web.rs
tests/: vector_integration.rs
tests/fixtures/: README.md
tests/fixtures/formats/html/: .ragrig_history  LCM.html  cases.html  ebs.html  glm.html  gsr.html  index.html  lm.html  mlm.html  mpm.html
tests/fixtures/formats/html/.ragrig/sessions/: 1781550386.json  1781553565.json  1781605480.json
tests/fixtures/formats/pdf/: .ragrig_history  .ragrig_store
tests/fixtures/formats/pdf/.ragrig/sessions/: 1781536730.json  1781536898.json  1781536971.json  1781537756.json  1781538327.json  1781538660.json  1781549402.json
tests/fixtures/formats/rmd/: .ragrig_history  Abstracts.Rmd  Bayesian_statistics.Rmd  Cases.Rmd  Classic_linear_models.Rmd  Generalized_Linear_Models.Rmd  Getting_started_with_R.Rmd  Learning_curves.Rmd  Linear_mixed-effects_models.Rmd  Working_with_Models.Rmd  index.Rmd
