[package]
name = "ragrig"
version = "0.7.0"
edition = "2024"
description = "Trait-driven RAG framework for students and researchers. Zero native dependencies, hot-swap any agent at runtime, hybrid BM25+vector retrieval. Default build compiles with cargo build --release and nothing else."
license = "MIT"
repository = "https://github.com/schmettow/ragrig"
readme = "README.md"
documentation = "https://docs.rs/ragrig"
exclude = [
    ".agents/",
    "Ragrig swappable agent architecture.md",
    "fix HTML parser performance nomic-embed never starts",
    "prompts/",
    "tests/fixtures/formats/*/.ragrig*",
]
keywords = [
    "rag",
    "llm",
    "embeddings",
    "retrieval",
    "vector-search",
    "ollama",
    "agent",
    "chat",
    "chunking",
]
categories = ["science", "text-processing", "asynchronous"]

[features]
default = ["internal", "ollama-embed"]
internal = ["rmp-serde"]
ollama-embed = []
local-embed = ["dep:fastembed"]
lancedb = [
    "dep:lancedb",
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:lance-index",
]
test-fixtures = ["dep:include_dir", "dep:tempfile"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
walkdir = "2.4"
pdf-extract = "0.7"
pdfsink-rs = "0.2"
sha2 = "0.10"
epub-parser = "0.3.4"
chunkedrs = "1.0"
rig-core = { version = "0.38", features = ["rayon"] }
rustyline = "15.0"
lancedb = { version = "0.30", optional = true }
arrow-array = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }
lance-index = { version = "7", optional = true }
urlencoding = "2"
fastembed = { version = "5", default-features = false, features = [
    "ort-download-binaries-rustls-tls",
    "hf-hub-rustls-tls",
    "image-models",
], optional = true }
async-trait = "0.1"
log = "0.4"
rmp-serde = { version = "1", optional = true }
zip = "7.0"
roxmltree = "0.21"
unpdf = "0.7"
include_dir = { version = "0.7", optional = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = "symbols"
