[package]
name = "ragrig"
version = "0.9.0"
edition = "2024"
description = "Trait-driven RAG framework for students and researchers. Zero native dependencies, hot-swap any agent at runtime, hybrid BM25+vector retrieval. Default build compiles with cargo build --release and nothing else."
license = "MIT"
repository = "https://github.com/schmettow/ragrig"
readme = "README.md"
documentation = "https://docs.rs/ragrig"
exclude = [
    ".agents/",
    "Ragrig swappable agent architecture.md",
    "fix HTML parser performance nomic-embed never starts",
    "prompts/",
    "tests/fixtures/formats/*/.ragrig*",
]
keywords = ["rag", "llm", "embeddings", "retrieval", "ollama"]
categories = ["science", "text-processing", "asynchronous"]

[features]
default = ["internal", "ollama-embed"]
internal = ["rmp-serde"]
ollama-embed = []
internal-embed = ["dep:fastembed"]
internal-generate = [
    "dep:candle-core",
    "dep:candle-transformers",
    "dep:tokenizers",
]
internal-generate-cuda = [
    "internal-generate",
    "candle-core/cuda",
    "candle-transformers/cuda",
]
internal-generate-metal = [
    "internal-generate",
    "candle-core/metal",
    "candle-transformers/metal",
]
internal-generate-mkl = [
    "internal-generate",
    "candle-core/mkl",
    "candle-transformers/mkl",
]
offline = ["internal", "internal-embed", "internal-generate"]
offline-cuda = ["offline", "internal-generate-cuda"]
offline-metal = ["offline", "internal-generate-metal"]
offline-mkl = ["offline", "internal-generate-mkl"]
lancedb = [
    "dep:futures-util",
    "dep:lancedb",
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:lance-index",
]
test-fixtures = ["dep:include_dir", "dep:tempfile"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros"] }
clap = { version = "4.0", features = ["derive", "env"] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3", optional = true }
walkdir = "2.4"
pdf-extract = "0.10"
pdfsink-rs = "0.2"
sha2 = "0.10"
epub-parser = "0.3.4"
chunkedrs = "1.0"
rig-core = "0.39"
rustyline = "18.0"
lancedb = { version = "0.30", optional = true }
arrow-array = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }
lance-index = { version = "7", optional = true }
urlencoding = "2"
fastembed = { version = "5", default-features = false, features = [
    "ort-download-binaries-rustls-tls",
    "hf-hub-rustls-tls",
], optional = true }
async-trait = "0.1"
log = "0.4"
rmp-serde = { version = "1", optional = true }
zip = "7.0"
roxmltree = "0.21"
unpdf = "0.7"
include_dir = { version = "0.7", optional = true }
tempfile = { version = "3", optional = true }
candle-core = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = "symbols"
