[package]
name = "ragrig-pdf-bench"
version = "0.1.0"
edition = "2024"
description = "Benchmark ragrig PDF parsers (unpdf, sloppy-pdf, vision-pdf) and send a quality report to an LLM"

[dependencies]
ragrig = { path = "../.." }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
walkdir = "2"
env_logger = "0.11"
log = "0.4"
