[package]
name = "ragrig-prompt-bench"
version = "0.1.0"
edition = "2024"
description = "Benchmark system prompts on one or more RagAgents"

[dependencies]
ragrig = { path = "../..", features = ["test-fixtures"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
