[package]
name = "pseudonymizer"
version = "0.1.0"
edition = "2024"
description = "Semantic pseudonymization using ragrig + local Ollama"

[dependencies]
ragrig = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
